# AgentChord

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
bringup/: headless.sh  run.sh  setup.sh
configs/agents/rl/basic/cart_pole/: gym_config.json  train_config.json
configs/agents/rl/push_cube/: gym_config.json  train_config.json
docs/: index.html
docs/source/api_reference/embodichain/: embodichain.agents.rst
docs/source/features/: agents.md
docs/static/css/: index.css
docs/static/js/: index.js
embodichain/: __init__.py
embodichain/agents/agentchord/: __init__.py  agent_graph.py  atom_action_utils.py  atom_actions.py  error_functions.py  graph_spec.py  monitor_functions.py  monitor_utils.py
embodichain/agents/agentchord/perception/: __init__.py  bbox_tracking.py  pose_estimation.py  sam3.py  stereo.py
embodichain/agents/hierarchy/: __init__.py  agent_base.py  compile_agent.py  llm.py
embodichain/agents/prompts/: monitor_functions.txt  recovery_rules.txt
embodichain/deploy/: run_agent_realworld.py
embodichain/deploy/devices/camera/king_fisher/: __init__.py  kingfisher_params.yaml  run_kingfisher.py
embodichain/deploy/robots/cobotmagic/: bridge_params.json  controller.py  keep_default.py  ros_bridge.py
embodichain/deploy/tools/sam3/: mask_detector.py
embodichain/lab/gym/envs/tasks/tableware/: base_agent_env.py
embodichain/lab/scripts/: run_agent.py  run_env.py
embodichain/lab/sim/agent/: atom_action_utils.py  atom_actions.py  monitor_functions.py  monitor_utils.py
embodichain/lab/sim/robots/: cobotmagic.py
embodichain/lab/sim/robots/dexforce_w1/: cfg.py
embodichain/lab/sim/utility/: solver_utils.py
embodichain/toolkits/vision/: __init__.py  stereo.py
tests/sim/agent/: test_agent_graph.py  test_atom_action_utils.py  test_atom_actions.py  test_graph_spec.py
