# [build-system]
# Use the legacy setuptools backend so the existing `setup.py` (which dynamically
# detects torch and builds C/CUDA extensions via torch.utils.cpp_extension)
# is still executed during build. This is a minimal, non-opinionated pyproject
# that modernizes the package while preserving the custom extension build steps.
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"


# Note:
# - Building the torch extensions requires a working PyTorch installation
#   available at build time (or FORCE_CUDA=1 for cross-compilation). We keep
#   the extension-building logic in `setup.py` because it needs to import
#   `torch` at build time to select CUDA/Cpp extension classes.
# - If you prefer a pure PEP 517 build without a legacy setup.py, we can
#   refactor the extension-building logic into a custom build backend plugin.

[project]
name = "embodichain"
description = "An end-to-end, GPU-accelerated, and modular platform for building generalized Embodied Intelligence."
readme = "README.md"
authors = [ { name = "EmbodiChain Developers" } ]
requires-python = ">=3.10"
dynamic = ["version"]

# Core install dependencies (kept from requirements.txt). Some VCS links are
# specified using PEP 508 direct references where present.
dependencies = [
    #"numpy==1.26.4",
    "torch==2.7.0",
    "torchvision==0.22.0",

    "dexsim_engine==0.3.11",
    "setuptools",
    "gymnasium",
    "langchain",
    "langchain-openai",
    "toppra==0.6.3",
    "pin",
    "pin-pink",
    "casadi",
    "qpsolvers[osqp]==4.8.1",
    "pytorch_kinematics==0.10.0",
    "polars==1.31.0",
    "PyYAML",
    "accelerate",
    "wandb",
    "tensorboard",
    "transformers",
    "diffusers",
    "deepspeed",
    "ortools",
    "prettytable",
    "black==26.3.1",
    "fvcore",
    "h5py",
    "tensordict",
    "viser==1.0.21",
    "lerobot",

    "ultralytics",
]

[project.optional-dependencies]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs"]

[tool.black]


[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
[[tool.uv.index]]
name = "open3dv"
url = "http://pyp.open3dv.site:2345/simple"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
dexsim_engine = [
  { index = "open3dv" },
]
